--- a/Projects/Frontend/bazaar-frontend/src/index.css
+++ b/Projects/Frontend/bazaar-frontend/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,35 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.entry-form {
+  align-content: center;
+  margin: auto;
+  width: 40%;
+  padding: 15px;
+}
+
+.btn-google {
+  margin: auto;
+  margin-top: 15px;
+  color: #F4A133;
+
+}
+
+#submit {
+  background-color: #F4A133;
+  font-weight: 650;
+}
+
+.forgot-password{
+  text-align: right;
+  font-size: 13px;
+  padding-top: 10px;
+  color: #7f7d7d;
+  margin: 0;
+}
+
+.forgot-password a {
+  color: #167bff;
 }
