--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Product Cell/ProductCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Product Cell/ProductCell.xib
@@ -1,75 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableProdcutCell" rowHeight="150" id="KGk-i7-Jjw" customClass="ProductCell" customModule="Bazaar_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="359" height="129"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableProdcutCell" rowHeight="155" id="KGk-i7-Jjw" customClass="ProductCell" customModule="Bazaar_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="363" height="134"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="359" height="129"/>
+                <rect key="frame" x="0.0" y="0.0" width="363" height="134"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-wI-RcL">
-                        <rect key="frame" x="0.0" y="0.0" width="359" height="129"/>
+                        <rect key="frame" x="0.0" y="0.0" width="363" height="134"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Qiv-u0-nWQ" userLabel="Price Label">
-                                <rect key="frame" x="307" y="98" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Giw-Wt-0fS" userLabel="Product Image View">
-                                <rect key="frame" x="10" y="10" width="60" height="80"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="4sr-5P-tfG"/>
-                                    <constraint firstAttribute="width" constant="60" id="YuU-tD-6Tj"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="vKi-TA-wkk" userLabel="Product Name Label">
-                                <rect key="frame" x="110" y="10" width="41.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="CUz-Y7-NJd">
+                                <rect key="frame" x="10" y="10" width="343" height="114"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Giw-Wt-0fS" userLabel="Product Image View">
+                                        <rect key="frame" x="0.0" y="0.0" width="109" height="114"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="gQy-m0-HcP" userLabel="Text Stack View">
+                                        <rect key="frame" x="129" y="0.0" width="157.5" height="114"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="vKi-TA-wkk" userLabel="Product Name Label">
+                                                <rect key="frame" x="0.0" y="0.0" width="42" height="21.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IyX-4i-qfR" userLabel="Product Brand Label">
+                                                <rect key="frame" x="0.0" y="44.5" width="42" height="22"/>
+                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Qiv-u0-nWQ" userLabel="Price Label">
+                                                <rect key="frame" x="0.0" y="89.5" width="42" height="24.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.compact.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="XbW-Cr-6zF" userLabel="Arrow Image View">
+                                        <rect key="frame" x="306.5" y="1.5" width="36.5" height="111"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Giw-Wt-0fS" firstAttribute="top" secondItem="3f4-wI-RcL" secondAttribute="top" constant="10" id="0NB-GP-QBk"/>
-                            <constraint firstItem="vKi-TA-wkk" firstAttribute="leading" secondItem="Giw-Wt-0fS" secondAttribute="trailing" constant="40" id="A7e-zl-7vF"/>
-                            <constraint firstAttribute="trailing" secondItem="Qiv-u0-nWQ" secondAttribute="trailing" constant="10" id="RmP-2O-zWQ"/>
-                            <constraint firstItem="vKi-TA-wkk" firstAttribute="top" secondItem="3f4-wI-RcL" secondAttribute="top" constant="10" id="i1l-we-51O"/>
-                            <constraint firstAttribute="bottom" secondItem="Qiv-u0-nWQ" secondAttribute="bottom" constant="10" id="m4d-j9-DS1"/>
-                            <constraint firstItem="Giw-Wt-0fS" firstAttribute="leading" secondItem="3f4-wI-RcL" secondAttribute="leading" constant="10" id="nPV-Bf-Phg"/>
+                            <constraint firstItem="CUz-Y7-NJd" firstAttribute="top" secondItem="3f4-wI-RcL" secondAttribute="top" constant="10" id="2Dw-R8-Acb"/>
+                            <constraint firstItem="CUz-Y7-NJd" firstAttribute="leading" secondItem="3f4-wI-RcL" secondAttribute="leading" constant="10" id="9KY-8d-6XR"/>
+                            <constraint firstAttribute="trailing" secondItem="CUz-Y7-NJd" secondAttribute="trailing" constant="10" id="Avl-0w-Aj0"/>
+                            <constraint firstAttribute="bottom" secondItem="CUz-Y7-NJd" secondAttribute="bottom" constant="10" id="LqN-wm-6P2"/>
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="3f4-wI-RcL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="eYz-Ue-OvY"/>
-                    <constraint firstItem="3f4-wI-RcL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="mFm-ry-u4B"/>
-                    <constraint firstAttribute="trailing" secondItem="3f4-wI-RcL" secondAttribute="trailing" id="tvw-c4-68k"/>
-                    <constraint firstAttribute="bottom" secondItem="3f4-wI-RcL" secondAttribute="bottom" id="wr4-GB-AVm"/>
+                    <constraint firstItem="3f4-wI-RcL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="QFw-yC-bpP"/>
+                    <constraint firstAttribute="trailing" secondItem="3f4-wI-RcL" secondAttribute="trailing" id="dbQ-XO-bzg"/>
+                    <constraint firstItem="3f4-wI-RcL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="iwb-li-fOP"/>
+                    <constraint firstAttribute="bottom" secondItem="3f4-wI-RcL" secondAttribute="bottom" id="j7I-cN-Krf"/>
                 </constraints>
             </tableViewCellContentView>
+            <constraints>
+                <constraint firstItem="Giw-Wt-0fS" firstAttribute="width" secondItem="njF-e1-oar" secondAttribute="width" multiplier="0.3" id="acH-zn-cQs"/>
+                <constraint firstItem="XbW-Cr-6zF" firstAttribute="width" secondItem="njF-e1-oar" secondAttribute="width" multiplier="0.1" id="isk-Up-HhO"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="productDescriptionLabel" destination="IyX-4i-qfR" id="wN3-oe-6XQ"/>
                 <outlet property="productImageView" destination="Giw-Wt-0fS" id="VVi-Wk-sXI"/>
                 <outlet property="productNameLabel" destination="vKi-TA-wkk" id="JHV-md-o9E"/>
                 <outlet property="productPriceLabel" destination="Qiv-u0-nWQ" id="zsz-wb-BTE"/>
             </connections>
-            <point key="canvasLocation" x="113.768115942029" y="136.27232142857142"/>
+            <point key="canvasLocation" x="-37" y="-16"/>
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="chevron.compact.right" catalog="system" width="32" height="64"/>
     </resources>
 </document>
