--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -130,8 +130,19 @@
                     <view key="view" contentMode="scaleToFill" id="kDy-OH-hcB">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="VdA-nE-iRy">
+                                <rect key="frame" x="124.33333333333333" y="127.99999999999999" width="165.33333333333337" height="165.66666666666663"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="nU8-wO-kZp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="VdA-nE-iRy" firstAttribute="width" secondItem="kDy-OH-hcB" secondAttribute="width" multiplier="0.4" id="Ug0-aW-9wX"/>
+                            <constraint firstItem="VdA-nE-iRy" firstAttribute="height" secondItem="kDy-OH-hcB" secondAttribute="width" multiplier="0.4" id="eOg-xL-Xxw"/>
+                            <constraint firstItem="VdA-nE-iRy" firstAttribute="centerX" secondItem="kDy-OH-hcB" secondAttribute="centerX" id="fCd-MO-4fW"/>
+                            <constraint firstItem="VdA-nE-iRy" firstAttribute="top" secondItem="nU8-wO-kZp" secondAttribute="top" constant="40" id="s6C-RR-0jz"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="kNR-Cg-Liv"/>
                 </viewController>
