--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -133,18 +133,42 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="VdA-nE-iRy">
                                 <rect key="frame" x="124.33333333333333" y="127.99999999999999" width="165.33333333333337" height="165.66666666666663"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ntr-J6-vgb">
+                                <rect key="frame" x="15" y="333.66666666666674" width="384" height="488.33333333333326"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="nU8-wO-kZp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="nU8-wO-kZp" firstAttribute="trailing" secondItem="ntr-J6-vgb" secondAttribute="trailing" constant="15" id="OVf-Ew-OQg"/>
                             <constraint firstItem="VdA-nE-iRy" firstAttribute="width" secondItem="kDy-OH-hcB" secondAttribute="width" multiplier="0.4" id="Ug0-aW-9wX"/>
+                            <constraint firstItem="ntr-J6-vgb" firstAttribute="top" secondItem="VdA-nE-iRy" secondAttribute="bottom" constant="40" id="aJB-LM-2BO"/>
                             <constraint firstItem="VdA-nE-iRy" firstAttribute="height" secondItem="kDy-OH-hcB" secondAttribute="width" multiplier="0.4" id="eOg-xL-Xxw"/>
                             <constraint firstItem="VdA-nE-iRy" firstAttribute="centerX" secondItem="kDy-OH-hcB" secondAttribute="centerX" id="fCd-MO-4fW"/>
+                            <constraint firstItem="ntr-J6-vgb" firstAttribute="leading" secondItem="nU8-wO-kZp" secondAttribute="leading" constant="15" id="lEx-3s-MJH"/>
                             <constraint firstItem="VdA-nE-iRy" firstAttribute="top" secondItem="nU8-wO-kZp" secondAttribute="top" constant="40" id="s6C-RR-0jz"/>
+                            <constraint firstItem="nU8-wO-kZp" firstAttribute="bottom" secondItem="ntr-J6-vgb" secondAttribute="bottom" constant="40" id="sXF-fQ-3MZ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="kNR-Cg-Liv"/>
+                    <connections>
+                        <outlet property="frameView" destination="ntr-J6-vgb" id="Faj-uy-tBZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="to7-4r-ib9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
